# playing_around_world

./: Cargo.toml  README.md  export_web_build.sh  export_windows_86_64.sh
assets/models/: SwordAndShieldRun.gltf
assets/shaders/: progress_bar.wgsl
build-template/: index.html
src/: main.rs
src/camera_behavior/: controls.rs
src/components/: animation_player.rs  debug.rs  enemy.rs  mod.rs  progress_bar.rs  ui_components.rs
src/enemy_behavior/: enemy_attack.rs  enemy_spawner.rs  mod.rs
src/resources/: CameraState.rs  animations.rs  asset_resources.rs  camera_state.rs  config.rs  game_state.rs  mod.rs
src/systems/: animation.rs  camera_system.rs  debug.rs  disposal.rs  mana_system.rs  mod.rs  movement.rs  progress_bar.rs  spawning.rs  ui_system.rs  utils.rs
