[package]
name = "playing_around_world"
version = "0.1.0"
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[dependencies]
bevy = { version = "0.14.0" }
rand = "0.8.5"

# Enable a small amount of optimization in debug mode.
[profile.dev]
opt-level = 1

# for Windows LLD
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
